--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
       "url": "https://u.expo.dev/992860c0-c777-48bd-b67b-4f2ca4a2e6bb"
     },
     "assetBundlePatterns": ["**/*"],
-    "jsEngine": "hermes",
+    "jsEngine": "jsc",
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.viniciusmoreria.liftoff",
@@ -65,8 +65,7 @@
         "expo-build-properties",
         {
           "ios": {
-            "useFrameworks": "static",
-            "deploymentTarget": "13.0"
+            "useFrameworks": "static"
           }
         }
       ],
