--- a/package.json
+++ b/package.json
@@ -22,59 +22,59 @@
     "@expo/vector-icons": "^13.0.0",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-firebase/analytics": "~15.4.0",
-    "@react-native-firebase/app": "~15.4.0",
-    "@react-native-firebase/firestore": "~15.4.0",
-    "@react-native-firebase/messaging": "~15.4.0",
-    "@react-native-firebase/perf": "~15.4.0",
-    "@react-native-firebase/remote-config": "~15.4.0",
-    "@react-native-masked-view/masked-view": "0.2.7",
+    "@react-native-firebase/analytics": "^15.6.0",
+    "@react-native-firebase/app": "^15.6.0",
+    "@react-native-firebase/firestore": "^15.6.0",
+    "@react-native-firebase/messaging": "^15.6.0",
+    "@react-native-firebase/perf": "^15.6.0",
+    "@react-native-firebase/remote-config": "^15.6.0",
+    "@react-native-masked-view/masked-view": "0.2.6",
     "@react-navigation/elements": "^1.3.6",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
-    "@sentry/react-native": "4.2.2",
+    "@sentry/react-native": "^3.1.1",
     "@shopify/flash-list": "1.1.0",
     "@tanstack/react-query": "^4.2.3",
     "axios": "^0.27.2",
     "date-fns": "^2.29.2",
-    "expo": "^46.0.0",
-    "expo-application": "~4.2.2",
-    "expo-build-properties": "~0.3.0",
-    "expo-constants": "~13.2.4",
-    "expo-dev-client": "~1.2.1",
-    "expo-device": "~4.3.0",
-    "expo-font": "~10.2.0",
-    "expo-image-picker": "~13.3.1",
-    "expo-linear-gradient": "~11.4.0",
-    "expo-notifications": "~0.16.1",
-    "expo-status-bar": "~1.4.0",
-    "expo-system-ui": "~1.3.0",
-    "expo-updates": "~0.14.5",
-    "expo-web-browser": "~11.0.0",
-    "lottie-react-native": "5.1.3",
+    "expo": "~45.0.8",
+    "expo-application": "~4.1.0",
+    "expo-build-properties": "~0.2.0",
+    "expo-constants": "~13.1.1",
+    "expo-dev-client": "~1.0.1",
+    "expo-device": "~4.2.0",
+    "expo-font": "~10.1.0",
+    "expo-image-picker": "~13.1.1",
+    "expo-linear-gradient": "~11.3.0",
+    "expo-notifications": "~0.15.4",
+    "expo-status-bar": "~1.3.0",
+    "expo-system-ui": "~1.2.0",
+    "expo-updates": "~0.13.4",
+    "expo-web-browser": "~10.2.1",
+    "lottie-react-native": "5.0.1",
     "moti": "^0.18.0",
     "nativewind": "^2.0.10",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.5",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
     "react-native-flash-message": "^0.3.1",
-    "react-native-gesture-handler": "~2.5.0",
-    "react-native-maps": "0.31.1",
-    "react-native-pager-view": "5.4.24",
-    "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-maps": "0.30.2",
+    "react-native-pager-view": "5.4.15",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-tab-view": "^3.1.1",
-    "react-native-web": "~0.18.7",
-    "react-native-webview": "11.23.0",
+    "react-native-web": "0.17.7",
+    "react-native-webview": "11.18.1",
     "react-native-youtube-iframe": "^2.2.2",
-    "sentry-expo": "~5.0.0",
+    "sentry-expo": "^4.2.0",
     "zustand": "^4.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
+    "@babel/core": "^7.12.9",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
-    "@types/react-native": "~0.69.1",
+    "@types/react-native": "~0.67.6",
     "@typescript-eslint/eslint-plugin": "5.23.0",
     "@typescript-eslint/parser": "5.23.0",
     "babel-plugin-inline-dotenv": "^1.7.0",
@@ -93,13 +93,13 @@
     "standard-version": "^9.5.0",
     "standard-version-expo": "^1.0.3",
     "tailwindcss": "^3.1.8",
-    "typescript": "^4.6.3"
+    "typescript": "~4.3.5"
   },
   "resolutions": {
     "babel-preset-expo": "~9.2.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native-safe-area-context": "4.3.1"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native-safe-area-context": "4.2.4"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
