--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -65,6 +65,6 @@ jobs:
           message: |
             This pull request preview deployment is now available.
 
-            <h3>Channel: pr-${{ github.event.number }}</h3>
+            Channel: pr-${{ github.event.number }}
 
-            <a href="href="${{ steps.publish-url.outputs.url }}"><img src="https://qr.expo.dev/development-client?appScheme=exp%2Bcom.viniciusmoreria.liftoff&url=https://u.expo.dev/992860c0-c777-48bd-b67b-4f2ca4a2e6bb%3Fchannel-name%3Dpr-${{ github.event.number }}" height="200px" width="200px"></a>'
+            <a href="${{ steps.publish-url.outputs.url }}"><img src="https://qr.expo.dev/development-client?appScheme=com.viniciusmoreria.liftoff&url=https://u.expo.dev/992860c0-c777-48bd-b67b-4f2ca4a2e6bb&channel-name=pr-${{ steps.PR.outputs.number }}" height="200px" width="200px"></a>'
