--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -40,6 +40,9 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: ${{ runner.os }}-yarn-
 
+      - name: EAS Pre-Install
+        run: yarn eas-build-pre-install
+
       - name: Install dependencies
         run: yarn install --immutable
 
