--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -41,7 +41,10 @@ jobs:
           restore-keys: ${{ runner.os }}-yarn-
 
       - name: EAS Pre-Install
-        run: yarn eas-build-pre-install
+        run: |
+          echo "${{ secrets.GOOGLE_SERVICES_ANDROID }}" | base64 --decode > ./src/libs/firebase/google-services.json
+          echo "${{ secrets.GOOGLE_SERVICES_IOS }}" | base64 --decode > ./src/libs/firebase/GoogleService-Info.plist
+          echo "${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}" | base64 --decode > ./src/libs/firebase/service-account-key.json
 
       - name: Install dependencies
         run: yarn install --immutable
