--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-firebase/analytics": "~15.4.0",
     "@react-native-firebase/app": "~15.4.0",
+    "@react-native-firebase/auth": "~15.4.0",
     "@react-native-firebase/firestore": "~15.4.0",
     "@react-native-firebase/messaging": "~15.4.0",
     "@react-native-firebase/perf": "~15.4.0",
