--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "react-native-flash-message": "^0.3.1",
     "react-native-flipper": "^0.164.0",
     "react-native-gesture-handler": "~2.5.0",
-    "react-native-maps": "1.3.2-beta.1",
+    "react-native-maps": "^1.3.2",
     "react-native-pager-view": "5.4.24",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
