--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,9 @@ jobs:
 
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          force-depth: 0
+          token: ${{ secrets.ACTION_TOKEN }}
 
       - name: Set up git user
         run: |
